// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Box /> renders <Box /> component 1`] = `
<div
  className="as-t-box"
>
  That’s why we pride ourselves on the fact that we love spending time outdoors, so when you ask us for advice, you know it comes from our real-world experiences.
</div>
`;

exports[`<Box /> renders <Box /> component with \`desktop\` and \`mobile\` properties: with props 1`] = `
<div
  className="as-t-box margin-left-mobile-1 margin-left-desktop-2"
>
  That’s why we pride ourselves on the fact that we love spending time outdoors, so when you ask us for advice, you know it comes from our real-world experiences.
</div>
`;

exports[`<Box /> renders <Box /> component with flex properties: flex 1`] = `
<div
  className="as-t-box"
  style={
    Object {
      "flex": 1,
    }
  }
>
  That’s why we pride ourselves on the fact that we love spending time outdoors, so when you ask us for advice, you know it comes from our real-world experiences.
</div>
`;

exports[`<Box /> renders <Box /> component with flex properties: flex object 1`] = `
<div
  className="as-t-box"
  style={
    Object {
      "flexBasis": "0%",
      "flexGrow": 1,
      "flexShrink": 1,
    }
  }
>
  That’s why we pride ourselves on the fact that we love spending time outdoors, so when you ask us for advice, you know it comes from our real-world experiences.
</div>
`;

exports[`<Box /> renders <Box /> with hidden prop: with hidden 1`] = `
<div
  className="as-t-box as-t-box--hidden"
>
  That’s why we pride ourselves on the fact that we love spending time outdoors, so when you ask us for advice, you know it comes from our real-world experiences.
</div>
`;
